styling: filter-section to row

--- a/src/index.html
+++ b/src/index.html
@@ -308,9 +308,6 @@
           justify-content: space-between;
           align-items: center;
         }
-        .filter-section {
-          margin-bottom: 12px;
-        }
         .student-list-item:hover {
           background-color: #f0f0f0;
         }
@@ -333,7 +330,9 @@
         /* filter */
         .filter-section{
           display: flex;
-          flex-direction: column;
+          flex-direction: row;
+          margin-bottom: 12px;
+          align-items: center;
           gap: 12px; 
         }
 
