--- a/src/index.html
+++ b/src/index.html
@@ -404,7 +404,8 @@
                 width: 100%;
                 flex: none;
                 overflow-y: auto;
-                height: 500px;
+                height: 100vh;
+                /* height: 500px; */
             }
             .info-card {
                 height: auto;
